2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* ControlPropertyNameConverter.css:
	* FontUnitConverter.cs:
	* UnitConverter.cs:
	* ValidatedControlConverter.cs:			
	added missing API.	

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlDataSourceView.cs:
	make CancelSelectOnNullParameter property works.

2007-04-19 Igor Zelmanovich <igorz@mainsoft.com>

	* ChangePassword.cs:
	does not accept invalid new password.	

2007-04-18  Igor Zelmanovich  <igorz@mainsoft.com>

	* Xml.cs:
	* XmlDataSource.cs:
	added MonoLimitation attributes		

2007-04-18  Igor Zelmanovich  <igorz@mainsoft.com>

	* BaseValidator.cs: for TARGET_J2EE: 
	used Page.Request.Browser to determine RenderUplevel

2007-04-12 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs:
	when databound with AutoGenerateColumns = true, 
	data source enumerator created only once.	

2007-04-18  Marek Habersack  <mhabersack@novell.com>

	* SiteMapDataSource.cs: query the site map for the current node
	when configured to use it as the start point. Fixes bug #81376,
	patch from Mike Morano <mmorano@mikeandwan.us>.

	* Calendar.cs: change year/month format to be culture aware. Fix
	for bug #81390. Patch submitted by Atsushi Enomoto
	<atsushi@ximian.com>

2007-04-17  Daniel Nauck  <dna@mono-project.de>

	* PasswordRecovery.cs: fixed typo (AnswerLabel.Text).

2007-04-17  Marek Habersack  <mhabersack@novell.com>

	* BaseValidator.cs: use the new uplevel browser detection code.

2007-04-12 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlDataSourceView.cs: fixed: InitializeParameters:
	restored flow, broken in r75137.

2007-04-12 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: popup menu is posed correctly if menu is placed within 
	container with position=relative

2007-04-12  Marek Habersack  <mhabersack@novell.com>

	* LoginView.cs: do not call CreateChildControls directly from the
	IsAuthenticated setter since that would destroy the controls the
	user might've configured from their Page_PreRender method.